--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,10 @@ project:
   type: book
   output-dir: docs
 
+execute:
+  echo: true
+  warning: false
+  message: false
 
 book:
   title: "Introdução à Ciência de Dados para o Bacharelado em Administração"
@@ -16,6 +20,7 @@ book:
     - 01_capitulo.qmd
     - 02_capitulo.qmd
     - 03_capitulo.qmd
+    - 04_capitulo.qmd
     - referencias.qmd
 
 bibliography: referencias.bib
