parte 2 e cap 6 iniciados

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,6 +28,10 @@ book:
         - 03_capitulo.qmd
         - 04_capitulo.qmd
         - 05_capitulo.qmd
+    - part: "Parte 2"
+      chapters:
+        - parte2.qmd
+        - 06_capitulo.qmd
 
     - referencias.qmd
 
